# weashadow_controller

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.cargo/: config
.github/workflows/: rust.yml
src/: hardware.rs  main.rs  ui.rs
src/hardware/: axis.rs  build_screen.rs  command_mode.rs  fpga.rs  gpio.rs  hsc32c1.rs  lt9711.rs  spi.rs  touch_screen.rs  uv_light.rs
src/printer/: mod.rs
src/ui/: command.rs  pixel.rs  ui.rs
test/: main.c
ui/: main.slint
