[package]
name = "ultraultra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.6"
spidev = "0.6.0"
snafu = "0.7.5"
i2cdev = "0.6.0"
hex = "0.4.3"
sysfs-pwm = { git = "https://github.com/rust-embedded/rust-sysfs-pwm" }
clap = { version = "4.4.8", features = ["derive"] }
byteorder = "1.5.0"
nix = "0.27.1"
ioctl-sys = "0.8.0"
derivative = "2.2.0"
[dependencies.slint]
version = "1.3.0"
default-features = true
features = ["compat-1-2","unsafe-single-threaded", "libm"]


[build-dependencies]
slint-build = "1.3.0"
